gccida/g2/init_expmed
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_expmed/src/expmed.c:595:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v27; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_expmed/src/expmed.c:601:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v33; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_expmed/src/expmed.c:617:25: error: invalid suffix 'xmode' on integer constant
gen_rtx_REG( *(short *)0xmode, 10000); 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_expmed/src/expmed.c:619:31: error: invalid suffix 'xmode' on integer constant
reg = gen_rtx_REG( *(short *)0xmode, 10000); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_expmed/src/expmed.c:621:39: error: invalid suffix 'xmode' on integer constant
v1 = gen_rtx_fmt_ee( PLUS, *(short *)0xmode, reg, reg); 
                                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_expmed/src/expmed.c:623:41: error: invalid suffix 'xmode' on integer constant
v2 = gen_rtx_fmt_ee( ASHIFT, *(short *)0xmode, reg, const_int_rtx[64]); 
                                        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_expmed/src/expmed.c:626:39: error: invalid suffix 'xmode' on integer constant
v5 = gen_rtx_fmt_ee( MULT, *(short *)0xmode, reg, const_int_rtx[64]); 
                                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_expmed/src/expmed.c:627:39: error: invalid suffix 'xmode' on integer constant
v6 = gen_rtx_fmt_ee( PLUS, *(short *)0xmode, v5, reg); 
                                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_expmed/src/expmed.c:630:39: error: invalid suffix 'xmode' on integer constant
v9 = gen_rtx_fmt_ee( MULT, *(short *)0xmode, reg, const_int_rtx[64]); 
                                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_expmed/src/expmed.c:631:41: error: invalid suffix 'xmode' on integer constant
v10 = gen_rtx_fmt_ee( MINUS, *(short *)0xmode, v9, reg); 
                                        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_expmed/src/expmed.c:645:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v15 = (  struct rtx_def *)v4[2]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_expmed/src/expmed.c:651:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v18 = (  struct rtx_def *)v8[2]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_expmed/src/expmed.c:657:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v21 = (  struct rtx_def *)v12[2]; 
                          ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_expmed/src/expmed.c:664:38: error: invalid suffix 'xmode' on integer constant
v22 = gen_rtx_fmt_e( NEG, *(short *)0xmode, reg); 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_expmed/src/expmed.c:667:39: error: invalid suffix 'xmode' on integer constant
v24 = gen_rtx_fmt_ee( DIV, *(short *)0xmode, reg, v23); 
                                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_expmed/src/expmed.c:670:39: error: invalid suffix 'xmode' on integer constant
v26 = gen_rtx_fmt_ee( MOD, *(short *)0xmode, reg, v25); 
                                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_expmed/src/expmed.c:700:34: error: use of undeclared identifier 'machine_mode'
v44 = gen_rtx_fmt_e( TRUNCATE, ( machine_mode)v38, v43); 
                                 ^
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_expmed/src/obj/expmed.o] Error 1
